testing/tests/ui/no-such-escaper.stderr
error: invalid escaper 'latex' for `escape` filter. The available extensions are: "", "htm", "html", "j2", "jinja", "jinja2", "md", "none", "svg", "txt", "xml", "yml"
 --> LocalEscaper.html:1:39
  |
       1 | In LaTeX you write `{{text}}` like `{{text|escape("latex")}}`.
         |                                       ^ close to this token
         |
 --> tests/ui/no-such-escaper.rs:4:3
  |
4 | #[template(
  |   ^^^^^^^^

error: no escaper defined for extension 'tex'. The available extensions are: "", "htm", "html", "j2", "jinja", "jinja2", "md", "none", "svg", "txt", "xml", "yml"
  --> tests/ui/no-such-escaper.rs:13:3
   |
13 | #[template(
   |   ^^^^^^^^
